classDiagram 
    class Message {
        +Time time
        +User user
        +String text
        +String imagepath
    }

    class Chat {
        +String Name
        +ArrayList<User> users
        +ArrayList<Message> messages
        +connect(user: User): void
        +disconnect(user: User): void
    }

    class User {
        +String id
        +String name
    }

    class Client {
        +ArrayList<Chat> chats
        +connect(user: User, chat_name: String): void
        +disconnect(user: User, chat_name: String): void
        +display_list(chats: ArrayList<Chat>): void
        +display_current(chat: Chat): void
        +send_message(message: Message): void
        +fetch_list(chats: ArrayList<Chat>): ArrayList<Chat>
        +fetch_current(chat: Chat): ArrayList<Message>
    }

    class Server {
        +store_chats(chat: Chat)
        +store_users(user: User)
        +sendreceive(stuff)
    }

    class ChatModelListener {
        +onMessageAdded(message: String): void
        +onMessagesCleared(): void
        +onMessagesLoaded(messages: List<String>): void
    }

    class ChatView {
        +JFrame frame
        +JList<String> messageList
        +JTextField inputField
        +JButton sendButton
        +JButton loadButton
        +JButton clearButton
        +DefaultListModel<String> displayModel
        +createAndShowUi(): void
        +onMessageAdded(message: String): void
        +onMessagesCleared(): void
        +onMessagesLoaded(messages: List<String>): void
        +getInputText(): String
        +clearInputField(): void
        +addSendButtonListener(listener: ActionListener): void
        +addLoadButtonListener(listener: ActionListener): void
        +addClearButtonListener(listener: ActionListener): void
        +addInputFieldListener(listener: ActionListener): void
        +getFrame(): JFrame
    }

    class ChatModel {
        +List<String> messages
        +List<ChatModelListener> listeners
        +addListener(listener: ChatModelListener): void
        +removeListener(listener: ChatModelListener): void
        +addMessage(message: String): void
        +clearMessages(): void
        +loadMessages(newMessages: List<String>): void
        +getMessageCount(): int
        +getAllMessages(): List<String>
        +notifyMessageAdded(message: String): void
        +notifyMessagesCleared(): void
        +notifyMessagesLoaded(messages: List<String>): void
    }

    class ChatController {
        +ChatModel model
        +ChatView view
        +initialize(): void
        +attachEventListeners(): void
        +handleSendMessage(): void
        +handleLoadMockMessages(): void
        +handleClearMessages(): void
        +main(args: String[]): void
    }

 
    ChatModel "1" o-- "*" ChatModelListener : listens
    ChatView "1" ..|> "1" ChatModelListener : implements
    ChatController "1" -- "1" ChatModel : manages
    ChatController "1" -- "1" ChatView : manages
    Message "*" o-- "1" User
    Chat "*" --> "*" User
    Chat "1" o-- "*" Message
    